# binance-client

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: config
src/: client.rs  const.rs  error.rs  exchange.rs  http.rs  interval.rs  kline.rs  lib.rs  main.rs  panic.rs  websocket.rs
src/data/: depth_element.rs  error.rs  interval.rs  mod.rs  order_side.rs  order_time_in_force.rs  order_type.rs  precision.rs  trade.rs
src/data/account/get/: request.rs  response.rs
src/data/depth/get/: mod.rs  request.rs  response.rs
src/data/event/: depth.rs  trade.rs
src/data/exchange_info/: mod.rs
src/data/exchange_info/get/: mod.rs  response.rs
src/data/exchange_info/symbol/: filter.rs  mod.rs  permission.rs  status.rs
src/data/klines/: kline.rs  mod.rs
src/data/klines/get/: mod.rs  request.rs  response.rs
src/data/open_orders/: mod.rs
src/data/open_orders/delete/: mod.rs  request.rs  response.rs
src/data/open_orders/get/: mod.rs  request.rs  response.rs
src/data/order/: mod.rs  side.rs  status.rs  time_in_force.rs  type.rs
src/data/serde/: decimal.rs  mod.rs
src/data/time/: mod.rs
src/data/time/get/: mod.rs  (+1 more)
src/examples/: product.rs  time.rs
src/http/: error.rs  mod.rs  response.rs
src/http_api_v3/: mod.rs  response.rs
src/http_api_v3/data/: error.rs  interval.rs  mod.rs  order_side.rs  order_status.rs  order_time_in_force.rs  order_type.rs  permission.rs
src/http_exchange_api_v2/: mod.rs  response.rs
src/http_exchange_api_v2/data/: mod.rs  status.rs  symbol.rs
src/websocket/: error.rs  mod.rs
src/websocket/event/: depth.rs  mod.rs
(+67 files in other folders)
