[package]
name = "binance-client"
version = "1.0.0"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Binance cryptocurrency exchange client"

[dependencies]
env_logger = "0.6"
log = "0.4"
failure = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

rust_decimal = "1.0"
chrono = "0.4"
hmac = "0.7"
sha2 = "0.8"
hex = "0.3"

reqwest = "0.9"
websocket = "0.22"
