[package]
name = "binance-client"
version = "1.5.3"
authors = ["hedgar2017 <hedgar2017@gmail.com>"]
edition = "2018"
license = "MIT"
description = "The Binance cryptocurrency exchange client"
repository = "https://github.com/hedgar2017/binance-client"

[[bin]]
name = "time"
path = "src/examples/time.rs"
[[bin]]
name = "product"
path = "src/examples/product.rs"

[dependencies]
env_logger = "0.8"
log = "0.4"
thiserror = "1.0"

serde = "1.0"
serde_json = "1.0"
rust_decimal = "1.10"
chrono = "0.4"
hmac = "0.10"
sha2 = "0.9"
hex = "0.4"

reqwest = "0.9"
websocket = "0.26"
